--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "quasar-framework": "^0.14.4",
     "vue": "^2.5.0",
     "vue-router": "^3.0.1",
-    "vuelidate": "^0.6.1"
+    "vuelidate": "^0.6.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
